--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,6 +1,13 @@
-<%= form_for(@list) do |f| %>
-  <div class="form-group">
-    <%= f.label :name %>
-    <%= f.text_field :name, class: 'form-control' %>
+<div class="container py-5">
+  <div class="row">
+    <div class="col-12 col-md-6 offset-md-3">
+      <div class="bg-white rounded p-3 shadow">
+        <h3>Create a new list</h3>
+        <%= simple_form_for @list do |f| %>
+          <%= f.input :name, placeholder: 'Drama' %>
+          <%= f.submit class: 'btn btn-success' %>
+        <% end %>
+      </div>
+    </div>
   </div>
-  <% end %>
+</div>
