--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,14 +1,25 @@
-<div class="container m-4">
-  <h1> My Lists</h1>
+
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);">
+  <div class="container">
+    <h1>Save any kind of movies</h1>
+    <p>Classic</p>
+  </div>
 </div>
 
-<div class="row">
-  <% @lists.each do |list| %>
-    <div class="col-4">
-      <div class="card m-4">
-        <p><%= list.name %></p>
+<div class="container mt-4">
+  <div class="d-flex align-items-center justify-content-between mb-3">
+    <h3 class="mb-0">My Lists</h3>
+    <%= link_to 'Create a movie list', new_list_path, class: 'btn btn-success' %>
+  </div>
+  <div class="row">
+    <% @lists.each do |list| %>
+      <div class="col-12 col-sm-6 col-md-4">
+          <%= link_to list_path(list), class:'text-decoration-none' do %>
+          <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('list_background.jpg') %>)">
+            <%= list.name %>
+          </div>
+        <% end %>
       </div>
-    </div>
     <% end %>
-    <%= link_to "Create new list", new_list_path, class: 'btn btn-primary' %>
+  </div>
 </div>
