--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -5,6 +5,8 @@
         <h3>Create a new list</h3>
         <%= simple_form_for @list do |f| %>
           <%= f.input :name, label: 'list name please', placeholder: 'drama' %>
+          <%= f.input :photo, as: :file %>
+         
           <%= f.submit class: 'btn btn-success' %>
         <% end %>
       </div>
