--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -13,13 +13,21 @@
   </div>
   <div class="row">
     <% @lists.each do |list| %>
-      <div class="col-12 col-sm-6 col-md-4">
-          <%= link_to list_path(list), class:'text-decoration-none' do %>
-          <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('list_background.jpg') %>)">
+      <% if list.photo.attached? %>
+        <div class="col-12 col-sm-6 col-md-4 my-3">
+            <%= link_to list_path(list), class:'text-decoration-none' do %>
+            <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key%>')">
+              <%= list.name %>
+            </div>
+          <% end %>
+        </div>
+      <% else %>
+        <div class="col-12 col-sm-6 col-md-4 my-3">
+         <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('list_background.jpg') %>)">
             <%= list.name %>
           </div>
-        <% end %>
-      </div>
+        </div>
+      <% end %>
     <% end %>
   </div>
 </div>
