anna work in progress, april 22

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,7 +5,9 @@
 }
 
 .card-category {
-   height: 180px;
+  background-size: cover;
+  background-position: center;
+  height: 180px;
   display: flex;
   justify-content: center;
   align-items: center;
