--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -1,8 +1,8 @@
-<div class="container py-5">
-   <div class="row">
+ <div class="row">
     <div class="col-12 col-md-6 offset-lg-3">
       <div class="bg-white rounded p-3 shadow">
         <%= simple_form_for [@list, @bookmark] do |f| %>
+        <%= f.input :name %>
         <%= f.input :comment, placeholder: 'Enter a comment about the movie', hint: 'Minimum 6 characters.' %>
         <%= f.association :movie, prompt: 'Select a movie', input_html: { class: 'select2' } %>
         <%= f.submit class: 'btn btn-primary' %>
@@ -10,5 +10,4 @@
       </div>
     </div>
   </div>
-</div>  
-
+</div>
