--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,11 +1,11 @@
-
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);">
   <div class="container">
     <h1>Save any kind of movies</h1>
-    <p>Classic</p>
+     <p>
+      <span id="banner-typed-text"></span>
+    </p>
   </div>
 </div>
-
 <div class="container mt-4">
   <div class="d-flex align-items-center justify-content-between mb-3">
     <h3 class="mb-0">My Lists</h3>
@@ -15,7 +15,7 @@
     <% @lists.each do |list| %>
       <% if list.photo.attached? %>
         <div class="col-12 col-sm-6 col-md-4 my-3">
-            <%= link_to list_path(list), class:'text-decoration-none' do %>
+          <%= link_to list_path(list), class:'text-decoration-none' do %>
             <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key%>')">
               <%= list.name %>
             </div>
@@ -23,11 +23,16 @@
         </div>
       <% else %>
         <div class="col-12 col-sm-6 col-md-4 my-3">
-         <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('list_background.jpg') %>)">
-            <%= list.name %>
-          </div>
+          <%= link_to list_path(list), class:'text-decoration-none' do %>
+            <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('list_background.jpg') %>)">
+              <%= list.name %>
+            </div>
+          <% end %>
         </div>
       <% end %>
     <% end %>
   </div>
+</div>
+<div class="container">
+   <%#= render 'bookmarks/form' %>
 </div>
