--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,7 +1,13 @@
 <div class="position-relative">
-  <div class="card-category card-large" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('list_background.jpg') %>)">
-    <h1><%= @list.name %></h1>
-  </div>
+    <% if @list.photo.attached? %>
+    <div class="card-category card-large" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key %>')">
+      <h1><%= @list.name %></h1>
+    </div>
+  <% else %>
+    <div class="card-category card-large" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('list_background.jpg') %>)">
+      <h1><%= @list.name %></h1>
+    </div>
+  <% end %>
   <span class="movie-tag"><%= pluralize(@list.movies.size, 'movie') %></span>
 </div>
 <div class="container mb-4">
@@ -17,6 +23,7 @@
       <% bookmark = movie.bookmarks.where(list: @list).each do |bookmark| %>
         <div class="col-12 col-sm-6 mb-4" data-aos="zoom-in">
           <div class="bg-white rounded shadow h-100">
+            <%= image_tag movie.poster_url, alt: movie.title, class: 'movie-img rounded-top' %>
             <div class="p-3 rounded-bottom d-flex flex-column">
               <strong><%= movie.title %> <span class="text-muted font-weight-normal">• <%= movie.rating %> <i class="fas fa-star star-yellow"></i></span></strong>
               <small class="text-muted"><%= movie.overview %></small>
