--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="row my-2">
     <% @list.movies.each do |movie| %>
-      <% bookmark = movie.bookmarks.where(list: @list).each do |bookmark| %>
+      <% movie.bookmarks.where(list: @list).each do |bookmark| %>
         <div class="col-12 col-sm-6 mb-4" data-aos="zoom-in">
           <div class="bg-white rounded shadow h-100">
             <%= image_tag movie.poster_url, alt: movie.title, class: 'movie-img rounded-top' %>
@@ -59,7 +59,7 @@
       <% end %>
     </div>
     <div class="col-12 col-sm-6">
-      <%= render "review" %>
+      <%= render "lists/review" %>
     </div>
   </div>
 </div>
